# DC3DDMesTextTool_GUI-and-Patch

./: .gitignore  DC3DDMesTextTool_GUI.csproj  MainForm.cs  MesScript.cs  MesToolProcessor.cs  Program.cs  README.md  ScriptInfo.cs  TextEntry.cs  TextFormatter.cs  UnicodeValidator.cs  patch_mes.py  patch_space_to_x.py
DC3DDPatch a/: CMakeLists.txt  DC4.md  FINDING_ADDRESSES.md  README.md  all_translations.txt  analyze_mes.py  analyze_sce.py  build.bat  build_agent.bat  build_dc3dd.bat  build_dc3dd_win32.bat  check_exe2.py  check_translations.py  disasm.txt  extract_titles.py  find_scenario.py  fix_includes.py  fix_json_indent.py  fix_labels.py  fix_prologue.py  fix_safeattach.py  fix_too_long.txt  fix_trace.py  fix_trace_w.py  fix_transactions_regex.py  generated_translations.cpp  help.txt  missing_ph_titles.txt  patch_dc4ph_json_titles.py  patch_sce_titles.py  run_build.bat  sce_analysis.txt  sce_asa.json  sce_com.json  sce_end.json  sce_hiy.json  sce_miu.json  sce_nin.json  sce_sii.json  sce_sor.json  (+5 more)
DC3DDPatch a/--single/: config.mes  dc4_asa20190429b.mes  dc4_asa20190429c1.mes  dc4_asa20190429c2.mes  dc4_asa20190429c3.mes  dc4_asa20190430b.mes  dc4_asa20190501b.mes  dc4_asa20190502e.mes  dc4_asa20190503b.mes  dc4_asa20190504b.mes  dc4_asa20190505d.mes  dc4_asa20200406a.mes  dc4_asu20190429b.mes  dc4_asu20190430c.mes  dc4_asu20190430d.mes  dc4_asu20190501c.mes  dc4_asu20190502c.mes  dc4_asu20190503b.mes  dc4_asu20190504c.mes  dc4_asu20190505b.mes  dc4_asu20190505d.mes  dc4_asu20190506b.mes  dc4_dc99990101a.mes  dc4_hiy20190315d1.mes  dc4_hiy20190315d2.mes  dc4_hiy20190316b.mes  dc4_hiy20190317b.mes  dc4_hiy20190319c.mes  dc4_hiy20190321b.mes  dc4_hiy20190322b.mes  dc4_hiy20190323b.mes  dc4_hiy20190324b.mes  dc4_hiy20190324e.mes  dc4_hiy20190329b.mes  dc4_hiy20190330c.mes  dc4_hiy20190330e.mes  dc4_hiy20190331a.mes  dc4_hiy20190331b.mes  dc4_hiy20190401b.mes  dc4_hiy20190403b.mes  (+438 more)
DC3DDPatch a/build_dc3dd/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  DC3DDLauncher.vcxproj  DC3DDLauncher.vcxproj.filters  DC3DDPatch.sln  DC3DDPatch.vcxproj  DC3DDPatch.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  detours.vcxproj  detours.vcxproj.filters
DC3DDPatch a/build_dc3dd_win32/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  DC3DDLauncher.vcxproj  DC3DDLauncher.vcxproj.filters  DC3DDPatch.sln  detours.vcxproj  (+6 more)
(+195 files in other folders)
